--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <meta property="og:title" content="Job Machine - A private community of nerds." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="images/logo.png" />
+    <meta property="og:url" content="https://www.jobmachine.org" />
 	</head>
 	<body class="is-preload">
 
