clean up some stuff

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.png" alt="" /></span>
 						<h1>Job Machine</h1>
-						<p>A private community for nerds<br />
-            Have an invitation token? <a href="https://www.jobmachine.org/register">Register your account here</a></p>
+						<p>A private community for nerds.<br />
+            Have an invitation token? <a href="https://www.jobmachine.org/register">Register your account here</a>.</p>
+						<a href="https://app.jobmachine.org/" class="button primary">Log In</a>
 					</header>
 
 				<!-- Nav -->
@@ -34,8 +34,6 @@
 						<ul>
 							<li><a href="#intro" class="active">About Job Machine</a></li>
 							<li><a href="#matrix">About Matrix</a></li>
-							<li><a href="faq.html">Frequently Asked Questions</a></li>
-							<li><a href="https://app.jobmachine.org/" class="button primary">Log In</a></li>
 						</ul>
 					</nav>
 
@@ -59,10 +57,10 @@
                     who help each other out.</p>
                     <p>Job Machine is privately operated and requires invitation to participate.</p>
 										<ul class="actions">
-											<li><a href="faq.html" class="button">Learn More</a></li>
+											<li><a href="faq.html" class="button primary">Frequently Asked Questions</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/logo_lg.png" alt="" /></span>
 								</div>
 							</section>
 
