make words gooder

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 										</header>
 										<p>Job Machine is a private chat community built on the 
                     <a href="#matrix">Matrix protocol</a>.
-                    What started as a simple chat among coworkers outside of business-controlled
-                    apps continued to evolve and grow into a community of people. We are primarily
+                    What started as a simple chat among coworkers outside of work
+                    continued to evolve and grow into a community of people. We are primarily
                     technologists, but we discuss a myriad of topics including film and music,
                     politics, financial advice, and any of our various hobbies and interests.</p>
                     <p>At our core we are a genuine social network of people with similar interests
