--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<header class="major">
 									<h2>What Is Matrix?</h2>
 								</header>
-                <p>Matrix is a protocol, a language for programs to talk to each other in that facilitates
+                <p>Matrix is a protocol, a language for programs to talk to each other that facilitates
                 chat, voice and video calls, and many other forms of transferring information back and forth.</p>
 								<ul class="features">
 									<li>
