add links to mobile apps to faq

--- a/faq.html
+++ b/faq.html
@@ -42,6 +42,9 @@
                   <p>Jump ahead:</p>
                   <ul>
                     <li><a href="#where-is-everyone">Where is everyone?</a></li>
+                    <li><a href="#forgot-password">I forgot my password!</a></li>
+                    <li><a href="#lost-encryption-key">I lost/forgot my encryption key/passphrase!</a></li>
+                    <li><a href="#mobile-apps">Is there an app for my phone?</a></li>
                     <li><a href="#connect">How do I connect with a different client instead of the webapp?</a></li>
                     <li><a href="#topical-rooms">I can't find a room for my favorite topic.</a></li>
                     <li><a href="#encryption">Is Job Machine encrypted?</a></li>
@@ -59,6 +62,64 @@
                   <p>Job Machine is a private community, but we aim to make accessibility easy-<i>ish</i>. Currently the Job Machine matrix server is open to federation, but all Job Machine-related rooms are need-to-know only. This means you can join with any matrix account across the federated network and participate in Job Machine. This also means that it's a little hard to find specific channels. Once the "Spaces" feature is fully developed, this should get easier.</p>
 
                   <p>If you're joining us for the first time, welcome! Start by joining the <code>#waitingroom:jobmachine.org</code> and introducing yourself to the admins, and they'll be able to invite you to the various private rooms we have.</p>
+                  <a href="#toc" class="button">Back to the top</a>
+                </div>
+							</section>
+
+							<section id="forgot-password" class="main">
+                <div class="content">
+                  <header class="major">
+                    <h2>I forgot my password!</h2>
+                  </header>
+                  <p>If you forgot your password, you can reset it by visiting the <a href="https://app.mssj.me/">the web app</a> login page, and simply follow the links to reset your password. This requires that you have associated an email address with your account at some point in time... if you never have, you will need to reach out to an administrator to reset your password.<p>
+                  <p>Resetting your password will cycle your encryption keys... basically that means that you won't be able to read any old messages in <a href="#encryption">encrypted rooms</a> unless you have another session logged in somewhere. If you do, you can export your encryption keys, and import them into your new sessions. For help, please reach out to an administrator.</p>
+                  <a href="#toc" class="button">Back to the top</a>
+                </div>
+							</section>
+
+							<section id="lost-encryption-key" class="main">
+                <div class="content">
+                  <header class="major">
+                    <h2>I lost/forgot my encryption key/passphrase!</h2>
+                  </header>
+                  <p>Your encryption key or passphrase is used to securely back up encryption information. This allows you to read encrypted messages on multiple devices.</p>
+                  <p>If you lost your key or forgot your passphrase, you can reset it from one of your logged-in sessions. Within your user settings, there is an option to "Reset" your Encryption Secure Backup key. The image below is from the user settings in the "Security and Privacy" section of user settings in the <a href="https://app.mssj.me/">web app</a>:</p>
+                  <p><img src="images/reset-encryption.png" alt="WebApp: Settings -> Security & Privacy"></p>
+                  <a href="#toc" class="button">Back to the top</a>
+                </div>
+							</section>
+
+							<section id="mobile-apps" class="main">
+                <div class="content">
+                  <header class="major">
+                    <h2>Is there an app for my phone?</h2>
+                  </header>
+                  <p>YES! Not only is there <em>an</em> app, there are a few! A couple recommendations:</p>
+                  
+                  <table>
+                    <tr>
+                      <td>
+                        <img class="image" src="images/element.png" width="60em"><br />
+                        Element<br />
+                      </td>
+                      <td>Very full featured, with support for person-to-person voice and video calling. Because it is fully featured, that means it might be a little overwhelming for some folks.</td>
+                      <td>
+                        <a href="https://play.google.com/store/apps/details?id=im.vector.app"><img src="images/Google-Play-US.svg" width="150em"></a><br />
+                        <a href="https://apps.apple.com/app/vector/id1083446067"><img src="images/App-store-US-alt.svg" width="150em"></a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <img class="image" src="images/fluffychat.png" width="60em"><br />
+                        FluffyChat<br />
+                      </td>
+                      <td>Simplified interface with a focus on being "cute". Does not support calling, but more similar to traditional text messaging apps.</td>
+                      <td>
+                        <a href="https://play.google.com/store/apps/details?id=chat.fluffy.fluffychat"><img src="images/Google-Play-US.svg" width="150em"></a><br />
+                        <a href="https://apps.apple.com/app/fluffychat/id1551469600"><img src="images/App-store-US-alt.svg" width="150em"></a>
+                      </td>
+                    </tr>
+                  </table>
                   <a href="#toc" class="button">Back to the top</a>
                 </div>
 							</section>
