explain what jm is better

--- a/faq.html
+++ b/faq.html
@@ -41,6 +41,7 @@
                 <div class="content">
                   <p>Jump ahead:</p>
                   <ul>
+                    <li><a href="#what-is-job-machine">What IS Job Machine?</a></li>
                     <li><a href="#where-is-everyone">Where is everyone?</a></li>
                     <li><a href="#forgot-password">I forgot my password!</a></li>
                     <li><a href="#lost-encryption-key">I lost/forgot my encryption key/passphrase!</a></li>
@@ -52,6 +53,29 @@
                     <li><a href="#nickname-color">Can I change the color of my displayed nickname?</a></li>
                     <li><a href="#long-nickname">Why does my nickname include my full matrix ID?</a></li>
                   </ul>
+                </div>
+							</section>
+							<section id="what-is-job-machine" class="main">
+                <div class="content">
+                  <header class="major">
+                    <h2>What IS Job Machine, anyway?</h2>
+                  </header>
+                  <p>
+                    Job Machine started way back around 2012 as a Google Hangout chat amongst some co-workers.
+                    Eventually, it expanded and needed a better platform, and migrated to Slack.</p>
+                  <p>Between then and now, it has grown significantly, morphed, shed old users, and gained new ones,
+                  eventually migrating to Matrix. However, Matrix is an open system compared to a Hangouts chat or a
+                  Slack team, so things don't line up quite the same way. What was once a specific chat room, or a
+                  specific group of people in a Slack Workspace is now more nebulous.</p>
+                  <p>In the new Matrix world, essentially Job Machine is just a collection of rooms on Matrix. There is
+                  no strict membership list. Nothing needs to be required of a room to be a part of Job Machine other
+                  than being something that you think other members of our community might want to participate in.</p>
+                  <p>This will change as the Spaces feature of Matrix gets finalized (which is getting closer and closer
+                  to happening!). Spaces allow for room discovery, member lists, and all the things that make a closed
+                  community like a Slack team possible in Matrix. Until then, we carry on, ambiguously, in the name of
+                  helping each other be better at whatever it is we're working on.
+                  </p>
+                  <a href="#toc" class="button">Back to the top</a>
                 </div>
 							</section>
 							<section id="where-is-everyone" class="main">
