try doing more terrible things for a registration page

--- a/register.html
+++ b/register.html
@@ -79,14 +79,11 @@
 
   <article id="success" class="widget modal hidden">
     <div class="center">
-      <header>
-        <h2 id="welcome"></h2>
-      </header>
-      <section>
+      <section id="main" class="center">
         <p>Your account has been successfully created. Click here to login in to the webapp:</p>
         <a href="https://app.jobmachine.org/" class="button primary">Log In</a>
-        <p>Or choose one of the many other clients available here: <a href="https://matrix.org/docs/projects/clients-matrix"
-            a>https://matrix.org/docs/projects/clients-matrix</a></p>
+        <p>Or choose one of the <a href="https://matrix.org/docs/projects/clients-matrix"
+            >many other clients available.</a></p>
       </section>
     </div>
   </article>
