make register link go to local page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<header id="header" class="alt">
 						<h1>Job Machine</h1>
 						<p>A private community for nerds.<br />
-            Have an invitation token? <a href="https://www.jobmachine.org/register">Register your account here</a>.</p>
+            Have an invitation token? <a href="register.html">Register your account here</a>.</p>
 						<a href="https://app.jobmachine.org/" class="button primary">Log In</a>
 					</header>
 
