add faq link to top nav

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 						<ul>
 							<li><a href="#intro" class="active">About Job Machine</a></li>
 							<li><a href="#matrix">About Matrix</a></li>
+              <li><a href="faq.html">FAQ</a></li>
 						</ul>
 					</nav>
 
