replace logo with new fancy svg version woohoo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <meta property="og:title" content="Job Machine - A private community of nerds." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/logo.png" />
+    <meta property="og:image" content="images/logo.svg" />
     <meta property="og:url" content="https://www.jobmachine.org" />
 	</head>
 	<body class="is-preload">
@@ -61,7 +61,7 @@
 											<li><a href="faq.html" class="button primary">Frequently Asked Questions</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/logo_lg.png" alt="" /></span>
+									<span class="image"><img src="images/logo.svg" alt="" /></span>
 								</div>
 							</section>
 
