--- a/faq.html
+++ b/faq.html
@@ -13,7 +13,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <meta property="og:title" content="Job Machine - Frequently Asked Questions" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/logo.png" />
+    <meta property="og:image" content="images/logo.svg" />
     <meta property="og:url" content="https://www.jobmachine.org/faq.html" />
 	</head>
 	<body class="is-preload">
