--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <meta property="og:title" content="Job Machine - Account Registration" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/logo.svg" />
+    <meta property="og:image" content="images/logo_248.png" />
     <meta property="og:url" content="https://www.jobmachine.org/register.html" />
 	</head>
 	<body class="is-preload">
