--- a/widgets/cmccoins.html
+++ b/widgets/cmccoins.html
@@ -1,7 +1,11 @@
 <doctype html>
 <head>
+  <link rel="stylesheet" href="../assets/css/main.css" />
 </head>
 <body>
-<script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/coinPriceBlock.js"></script><div id="coinmarketcap-widget-coin-price-block" coins="1,1027,2010,5665,1762" currency="USD" theme="light" transparent="false" show-symbol-logo="true"></div>
+  <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/coinPriceBlock.js"></script>
+  <div
+      align="center" id="coinmarketcap-widget-coin-price-block" coins="1,1027,2010,5665,1762" currency="USD" theme="light" transparent="false" show-symbol-logo="true">
+  </div>
 </body>
 </html>
