add some bits for donation pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 						<h1>Job Machine</h1>
 						<p>A private community for nerds.<br />
             Have an invitation token? <a href="register.html">Register your account here</a>.</p>
-						<a href="https://app.jobmachine.org/" class="button primary">Log In</a>
+						<a href="https://app.jobmachine.org/" class="button">Log In</a>
+						<a href="donate.html" class="button primary">Donate</a>
 					</header>
 
 				<!-- Nav -->
