fix some verbiage

--- a/donate.html
+++ b/donate.html
@@ -48,8 +48,14 @@
 								<p>There are a variety of options to choose from. If you'd like to give a specific amount as a one-time
                 donation, simply use the "quantity" feature while checking out to give your desired donation. <b>Members
                 who donate on a recurring subscription plan are eligible for extra swag and gifts if there are funds
-                available, as a thank you for their continuing contributions.</b></p>
-                <p>All donations are handled through Stripe for secure payment processing.</p>
+                available, as a thank you for their continuing contributions. You will also be invited to private rooms
+                for donors only.</b></p>
+                <p>All donations are handled through Stripe for secure payment processing. <b>To discontinue a recurring
+                  donation, reach out to an admin in matrix or email <a
+                                                                         href="mailto:donate@jobmachine.org">donate@jobmachine.org</a>,
+                 and we will discontinue it at our earliest
+                 possible convenience, usually within 2-4
+                 days.</b></p>
 
 										<div class="row">
 											<div class="col-6 col-12-medium">
