more verbiage changes

--- a/donate.html
+++ b/donate.html
@@ -76,7 +76,7 @@
                           <header class="major">
                           <li><h2>Monthly Recurring Donations</h2></li>
                             Makes you eligible for fun swag if there are leftover funds, and access to a special
-                            "donor swag" room to discuss design details!
+                            "donors only" rooms!
                           </header>
 
 													<li><a href="https://buy.stripe.com/00g14w0gh5Eefwk149" class="button primary fit">Monthly Donation - $1</a></li>
