updates to donate page and new ada wallet qr code

--- a/donate.html
+++ b/donate.html
@@ -56,6 +56,9 @@
                  and we will discontinue it at our earliest
                  possible convenience, usually within 2-4
                  days.</b></p>
+                <p>If you're into crypto, we also accept <a href="#ada">donations in ADA</a>, the currency of the
+                Cardano network. Funds sent to this wallet address will automatically be staked in a Cardano staking
+                pool operated by other members of the Job Machine, so it's a win-win!</p>
 
 										<div class="row">
 											<div class="col-6 col-12-medium">
@@ -79,16 +82,31 @@
                             "donors only" rooms!
                           </header>
 
-													<li><a href="https://buy.stripe.com/00g14w0gh5Eefwk149" class="button primary fit">Monthly Donation - $1</a></li>
-													<li><a href="https://buy.stripe.com/00g6oQ3stc2Cbg46ou" class="button primary fit">Monthly Donation - $2</a></li>
-													<li><a href="https://buy.stripe.com/9AQfZq6EF0jU6ZO3cj" class="button primary fit">Monthly Donation - $5</a></li>
-													<li><a href="https://buy.stripe.com/aEUeVm4wxc2C1Fu4go" class="button primary fit">Monthly Donation - $10</a></li>
-													<li><a href="https://buy.stripe.com/00g28A3st2s20Bq4gp" class="button primary fit">Monthly Donation - $25</a></li>
-													<li><a href="https://buy.stripe.com/4gwaF63st8QqgAoeV4" class="button primary fit">Monthly Donation - $50</a></li>
+													<li><a href="https://buy.stripe.com/8wM00s4wx2s20Bq28j" class="button primary fit">Monthly Donation - $1</a></li>
+													<li><a href="https://buy.stripe.com/9AQ14we775EeesgeV6" class="button primary fit">Monthly Donation - $2</a></li>
+													<li><a href="https://buy.stripe.com/00g6oQ8MN2s2esgfZb" class="button primary fit">Monthly Donation - $5</a></li>
+													<li><a href="https://buy.stripe.com/eVa9B22op8QqgAo28m" class="button primary fit">Monthly Donation - $10</a></li>
+													<li><a href="https://buy.stripe.com/dR6cNe0gheaKesg00f" class="button primary fit">Monthly Donation - $25</a></li>
+													<li><a href="https://buy.stripe.com/fZeeVm9QR7Mmck86oE" class="button primary fit">Monthly Donation - $50</a></li>
 												</ul>
 											</div>
 										</div>
 							</section>
+              <section id="content" class="main">
+                <header class="major" id="ada">
+                  <h2>Donate with ADA</h2>
+                </header>
+                <div class="stacked" align="center">
+                  <a
+                      href="https://cardanoscan.io/address/addr1q9r2kjgf2elffyax6kwpw737g3gh0z9xtyja6scuun6lfxkv45xumkya6lva98x9w8xkmlvjc95027454h6j5vrl6ykq22e45z">
+                    <img src="images/ada-wallet-qr.png">
+                  </a>
+                  <p
+                      id="wallet_address">addr1q9r2kjgf2elffyax6kwpw737g3gh0z9xtyja6scuun6lfxkv45xumkya6lva98x9w8xkmlvjc95027454h6j5vrl6ykq22e45z</p>
+
+                  <p>Click the barcode to view this address on the blockchain</p>
+                </div>
+              </section>
 					</div>
 
 				<!-- Footer -->
@@ -98,7 +116,7 @@
 
 			</div>
 
-		<!-- Scripts -->
+      <!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
