--- a/faq.html
+++ b/faq.html
@@ -106,7 +106,7 @@
                   <header class="major">
                     <h2>I forgot my password!</h2>
                   </header>
-                  <p>If you forgot your password, you can reset it by visiting the <a href="https://app.mssj.me/">the web app</a> login page, and simply follow the links to reset your password. This requires that you have associated an email address with your account at some point in time... if you never have, you will need to reach out to an administrator to reset your password.<p>
+                  <p>If you forgot your password, you can reset it by visiting the <a href="https://app.jobmachine.org/">the web app</a> login page, and simply follow the links to reset your password. This requires that you have associated an email address with your account at some point in time... if you never have, you will need to reach out to an administrator to reset your password.<p>
                   <p>Resetting your password will cycle your encryption keys... basically that means that you won't be able to read any old messages in <a href="#encryption">encrypted rooms</a> unless you have another session logged in somewhere. If you do, you can export your encryption keys, and import them into your new sessions. For help, please reach out to an administrator.</p>
                   <a href="#toc" class="button">Back to the top</a>
                 </div>
@@ -118,7 +118,10 @@
                     <h2>I lost/forgot my encryption key/passphrase!</h2>
                   </header>
                   <p>Your encryption key or passphrase is used to securely back up encryption information. This allows you to read encrypted messages on multiple devices.</p>
-                  <p>If you lost your key or forgot your passphrase, you can reset it from one of your logged-in sessions. Within your user settings, there is an option to "Reset" your Encryption Secure Backup key. The image below is from the user settings in the "Security and Privacy" section of user settings in the <a href="https://app.mssj.me/">web app</a>:</p>
+                  <p>If you lost your key or forgot your passphrase, you can reset it from one of your logged-in
+                  sessions. Within your user settings, there is an option to "Reset" your Encryption Secure Backup key.
+                  The image below is from the user settings in the "Security and Privacy" section of user settings in
+                  the <a href="https://app.jobmachine.org/">web app</a>:</p>
                   <p><img src="images/reset-encryption.png" alt="WebApp: Settings -> Security & Privacy"></p>
                   <a href="#toc" class="button">Back to the top</a>
                 </div>
