link room-specific avatar/nick section in faq properly

--- a/faq.html
+++ b/faq.html
@@ -52,6 +52,7 @@
                     <li><a href="#bot">What can the bot do?</a></li>
                     <li><a href="#nickname-color">Can I change the color of my displayed nickname?</a></li>
                     <li><a href="#long-nickname">Why does my nickname include my full matrix ID?</a></li>
+                    <li><a href="#room-nick">How do some people have a different nickname or avatar in certain rooms?</a></li>
                     <li><a href="#unable-to-decrypt">I'm getting "Unable to decrypt" messages for only a certain person,
                         what's going on?</a></li>
                   </ul>
