one more comment about joining rooms in the space

--- a/faq.html
+++ b/faq.html
@@ -77,6 +77,9 @@
                   order to be invited to the Space. If your Matrix account is on the jobmachine.org homeserver, you will
                   be automatically added to the Waiting Room, but will still need to show signs of life and be invited
                   to the Space to participate in our other rooms.</p>
+                  <p>Once you have joined the Job Machine Space, you can "Explore Rooms" of the space and join anything
+                  that looks interesting! A few rooms are suggested as a place to get started, since it can be
+                  overwhelming at first.</p>
                   <a href="#toc" class="button">Back to the top</a>
                 </div>
 							</section>
