fix some comments on the donate page

--- a/donate.html
+++ b/donate.html
@@ -47,18 +47,14 @@
                 build and manage. So if you appreciate those things, feel free to donate!</p>
 								<p>There are a variety of options to choose from. If you'd like to give a specific amount as a one-time
                 donation, simply use the "quantity" feature while checking out to give your desired donation. <b>Members
-                who donate on a recurring subscription plan are eligible for extra swag and gifts if there are funds
-                available, as a thank you for their continuing contributions. You will also be invited to private rooms
-                for donors only.</b></p>
+                who donate on a recurring subscription plan may be eligible for extra swag and gifts if there are funds
+                available as a thank you for their continuing contributions.</b></p>
                 <p>All donations are handled through Stripe for secure payment processing. <b>To discontinue a recurring
                   donation, reach out to an admin in matrix or email <a
                                                                          href="mailto:donate@jobmachine.org">donate@jobmachine.org</a>,
-                 and we will discontinue it at our earliest
-                 possible convenience, usually within 2-4
-                 days.</b></p>
+                 and we will discontinue it at our earliest possible convenience, usually within 2-4 days.</b></p>
                 <p>If you're into crypto, we also accept <a href="#ada">donations in ADA</a>, the currency of the
-                Cardano network. Funds sent to this wallet address will automatically be staked in a Cardano staking
-                pool operated by other members of the Job Machine, so it's a win-win!</p>
+                Cardano network.</p>
 
 										<div class="row">
 											<div class="col-6 col-12-medium">
@@ -78,8 +74,8 @@
 												<ul class="actions stacked">
                           <header class="major">
                           <li><h2>Monthly Recurring Donations</h2></li>
-                            Makes you eligible for fun swag if there are leftover funds, and access to a special
-                            "donors only" rooms!
+                            Maybe makes you eligible for fun swag if there are leftover funds! Absolutely nothing guaranteed
+                            here.
                           </header>
 
 													<li><a href="https://buy.stripe.com/8wM00s4wx2s20Bq28j" class="button primary fit">Monthly Donation - $1</a></li>
