fix moar donates

--- a/donate.html
+++ b/donate.html
@@ -62,7 +62,7 @@
 
                           <header class="major">
                           <li><h2>One Time Donations</h2></li>
-                            Change the quantity in your purchase details for a more precise donation amount. Thank you!
+                          Change the quantity in your purchase details for a more precise donation amount.<br /><br />Thank you!
                           </header>
 
 													<li><a href="https://buy.stripe.com/9AQ4gIaUVfeOdocaEE" class="button fit">One Time Donation - $1</a></li>
@@ -75,7 +75,7 @@
                           <header class="major">
                           <li><h2>Monthly Recurring Donations</h2></li>
                             Maybe makes you eligible for fun swag if there are leftover funds! Absolutely nothing guaranteed
-                            here.
+                            here, but be sure to use a valid shipping address just in case.<br />Thank you!
                           </header>
 
 													<li><a href="https://buy.stripe.com/8wM00s4wx2s20Bq28j" class="button primary fit">Monthly Donation - $1</a></li>
