666 monthly donation price

--- a/donate.html
+++ b/donate.html
@@ -87,6 +87,8 @@
 													<li><a href="https://buy.stripe.com/eVa5kM9QR7Mm6ZOdR8" class="button primary fit">Monthly
                               Donation - $4.20 (the twitty special)</a></li>
 													<li><a href="https://buy.stripe.com/00g6oQ8MN2s2esgfZb" class="button primary fit">Monthly Donation - $5</a></li>
+													<li><a href="https://buy.stripe.com/eVa9B2gff8Qq0BqcN5" class="button primary fit">Monthly
+                              Donation - $6.66</a></li>
 													<li><a href="https://buy.stripe.com/eVa9B22op8QqgAo28m" class="button primary fit">Monthly Donation - $10</a></li>
 													<li><a href="https://buy.stripe.com/dR6cNe0gheaKesg00f" class="button primary fit">Monthly Donation - $25</a></li>
 													<li><a href="https://buy.stripe.com/fZeeVm9QR7Mmck86oE" class="button primary fit">Monthly Donation - $50</a></li>
