add more nav buttons

--- a/donate.html
+++ b/donate.html
@@ -34,6 +34,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html" class="active">Job Machine Home</a></li>
+							<li><a href="faq.html" class="active">FAQ</a></li>
 							<li><a href="https://app.jobmachine.org/" class="button primary">Log In</a></li>
 						</ul>
 					</nav>
