--- a/faq.html
+++ b/faq.html
@@ -48,6 +48,7 @@
                   <ul>
                     <li><a href="#what-is-job-machine">What IS Job Machine?</a></li>
                     <li><a href="#where-is-everyone">Where is everyone?</a></li>
+                    <li><a href="#code-of-conduct">Is there a code of conduct or?</a></li>
                     <li><a href="#forgot-password">I forgot my password!</a></li>
                     <li><a href="#lost-encryption-key">I lost/forgot my encryption key/passphrase!</a></li>
                     <li><a href="#mobile-apps">Is there an app for my phone?</a></li>
@@ -101,6 +102,28 @@
                   <p>If you're joining us for the first time, welcome! Start by joining the
                   <code>#waitingroom:jobmachine.org</code> and introducing yourself to the admins, and they'll be able
                   to invite you to the Space.</p>
+                  <a href="#toc" class="button">Back to the top</a>
+                </div>
+							</section>
+
+							<section id="code-of-conduct" class="main">
+                <div class="content">
+                  <header class="major">
+                    <h2>Is there a code of conduct?</h2>
+                  </header>
+                  <p>We have never needed any official Code of Conduct. Generally, because we're such a small group of
+                  people, everyone gets to know everyone else and problems tend to work themselves out. However it is
+                  worth saying that at a bare minimum the expectation is to treat everyone in Job Machine with
+                  respect.</p>
+                  <p><img src="images/billandted.gif" alt="BE EXCELLENT TO EACH OTHER"></p>
+                  <p>In the words of Bill and Ted: <em>BE EXCELLENT TO EACH OTHER.</em></p>
+                  <p>Additionally, our community is founded on interaction. Getting to know each other requires actually
+                  talking to one another, and as such inactive members will occasionally be pruned from the community.
+                  If you are removed from the Job Machine and want to rejoin the conversation, ask to be re-invited by
+                  sending a message in the <code>#waitingroom:jobmachine.org</code>.</p>
+                  <p>Repeat violators or "drive-by" members (folks who surface when they need help, but who generally do
+                  not provide any substantive help back) may notice less success when asking to be re-invited, as their
+                  behavior violates the "BE EXCELLENT TO EACH OTHER" ideology.</p>
                   <a href="#toc" class="button">Back to the top</a>
                 </div>
 							</section>
