delete an extra word

--- a/faq.html
+++ b/faq.html
@@ -48,7 +48,7 @@
                   <ul>
                     <li><a href="#what-is-job-machine">What IS Job Machine?</a></li>
                     <li><a href="#where-is-everyone">Where is everyone?</a></li>
-                    <li><a href="#code-of-conduct">Is there a code of conduct or?</a></li>
+                    <li><a href="#code-of-conduct">Is there a code of conduct?</a></li>
                     <li><a href="#forgot-password">I forgot my password!</a></li>
                     <li><a href="#lost-encryption-key">I lost/forgot my encryption key/passphrase!</a></li>
                     <li><a href="#mobile-apps">Is there an app for my phone?</a></li>
